# Simple-Logger

./: CMakeLists.txt  Log.cpp  Log.h  Logger.cpp  Logger.h  README.md  log.cpp  log.h  main.cpp
include/: Level.h  Log.h
src/: Level.cpp  main.cpp
